k8s/ecommerce.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-deployment
spec:
  selector:
    matchLabels:
      app: ecommerce-deployment
  template:
    metadata:
      labels:
        app: ecommerce-deployment
    spec:
      containers:
      - name: ecommerce-container 
        image: ashinjoy/ecommerce
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        volumeMounts: 
          - mountPath: /app/assets
            name: assets-storage 
      volumes:
        - name: assets-storage
          persistentVolumeClaim:
            claimName: assets-claim 
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
spec:
  selector:
    app: ecommerce-deployment
  ports:
  - port: 3000
    targetPort: 3000
