k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: genex.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ecommerce-service
            port: 
              number: 3000
